# YUVDemo

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xl/yuvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CameraYuv.cpp  CameraYuv.h  YuvUtils.cpp  YuvUtils.h  native-lib.cpp  util.h
app/src/main/java/com/xl/yuvdemo/: CameraActivity.kt  ImageActivity.java  ImageUtil.kt  ImageUtils.java  MainActivity.java  MainActivity.kt  YuvUtils.java
app/src/main/java/com/xl/yuvdemo/bean/: ImageBean.java
app/src/main/java/com/xl/yuvdemo/camera/: CameraActivity.kt  CameraFragment.kt  GalleryFragment.kt  PhotoFragment.kt  ViewExtensions.kt
app/src/main/java/com/xl/yuvdemo/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/color/: color_selector_tab.xml
app/src/main/res/layout/: activity_main.xml  camera_ui_container.xml  fragment_camera.xml  fragment_gallery.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sheenhan/health/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
